# swagger/swagger.json
@@ -222,6 +222,31 @@
                 }
             }
         },
+        "/master/user": {
+            "get": {
+                "tags": [
+                    "master"
+                ],
+                "description": "get data cabang",
+                "operationId": "MasterController.master cabang",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "Authorization",
+                        "description": "Authorization Token",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} models.Master_user"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
         "/other/download-zip-file/{cabangid}/{loanid}/{siklus}": {
             "get": {
                 "tags": [
@@ -384,7 +409,16 @@
             "title": "Data_set_upload_file",
             "type": "object",
             "properties": {
-                "id": {
+                "cabangid": {
+                    "type": "string"
+                },
+                "created_by": {
+                    "type": "string"
+                },
+                "loanid": {
+                    "type": "string"
+                },
+                "siklus": {
                     "type": "string"
                 },
                 "tipefile1": {
